[package]
name = "glem"
version = "0.1.0"
edition = "2024"
authors = ["Ken <kenakioreed@gmail.com>"]
license = "MIT"
repository = "https://github.com/tiby312/glem"
description = "Linear algebra transformation adaptors"
keywords = ["matrix", "linear algebra","adaptors","graphics","3d"]
readme = "README.md"
include = ["src/**/*", "LICENSE-MIT", "README.md"]

[dependencies]
glam = "0.30.1"
